generated-tests/tests/snapshots/tsx/test_generated_export_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
export const exported = value7;

AST:
(program
  (export_statement
    (lexical_declaration
      (variable_declarator
        (identifier exported)
        (identifier value7)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "exported",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value7",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 25,
            end_line: 1,
            end_column: 31,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
