generated-tests/tests/snapshots/tsx/test_generated_flow_maybe_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const val1: ?string = null;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier val1)
      (type_annotation
        (flow_maybe_type
          (predefined_type)
        )
      )
      (null)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "val1",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
