generated-tests/tests/snapshots/tsx/test_generated_for_in_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
for (const key in obj) { console.log(key); }

AST:
(program
  (for_in_statement
    (identifier key)
    (identifier obj)
    (statement_block
      (expression_statement
        (call_expression
          (member_expression
            (identifier console)
            (property_identifier)
          )
          (arguments
            (identifier key)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "key",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 12,
                end_line: 1,
                end_column: 15,
            },
        },
        Usage {
            name: "obj",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 22,
            },
        },
        Usage {
            name: "console.log(key)",
            kind: CallExpression,
            position: Position {
                start_line: 1,
                start_column: 26,
                end_line: 1,
                end_column: 42,
            },
        },
        Usage {
            name: "console",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 26,
                end_line: 1,
                end_column: 33,
            },
        },
        Usage {
            name: "log",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 34,
                end_line: 1,
                end_column: 37,
            },
        },
        Usage {
            name: "key",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 38,
                end_line: 1,
                end_column: 41,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
