generated-tests/tests/snapshots/tsx/test_generated_generic_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value10: Array<number> = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value10")
      type: (type_annotation
        (generic_type
          name: (type_identifier "Array")
          type_arguments: (type_arguments
            (predefined_type "number")
          )
        )
      )
      value: (array
        (number "1")
        (number "2")
        (number "3")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value10",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Array",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 21,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
